--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="サイト説明文150文字以内で">
+    <meta name="description" content="このサイトの説明">
     <meta name="subject" content="サイトの主題">
     <meta name="robots" content="index,follow,noodp">
     <meta name="googlebot" content="index,follow">
@@ -13,13 +13,13 @@
     <link rel="icon" href="/images/favicon-32.png" sizes="32x32" type="image/png">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:url" content="https://example.com/page.html">
-    <meta property="og:type" content="website or artcle">
-    <meta property="og:title" content="Content Title">
+    <meta property="og:url" content="http://hogehoge.jp">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="site name">
     <meta property="og:image" content="https://example.com/image.jpg">
-    <meta property="og:description" content="Description Here">
+    <meta property="og:description" content="このサイトの説明">
 
-    <title>Title</title>
+    <title>site name</title>
 
     <link rel="stylesheet" href="/css/style.css">
 
