refactor: sass update

--- a/styleguide/color.html
+++ b/styleguide/color.html
@@ -30,24 +30,24 @@
       <div class="aigis-contents__body">
         
   <div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #000000;"></div><div class="aigis-colorPalette__label">#000000</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #1DA1F2;"></div><div class="aigis-colorPalette__label">#1DA1F2</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #38393D;"></div><div class="aigis-colorPalette__label">#38393D</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #3A579D;"></div><div class="aigis-colorPalette__label">#3A579D</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #4ECD00;"></div><div class="aigis-colorPalette__label">#4ECD00</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #5951D8;"></div><div class="aigis-colorPalette__label">#5951D8</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #CD5B45;"></div><div class="aigis-colorPalette__label">#CD5B45</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #FFFFFF;"></div><div class="aigis-colorPalette__label">#FFFFFF</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0,0,0,0.12);"></div><div class="aigis-colorPalette__label">rgba(0,0,0,0.12)</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0,0,0,0.26);"></div><div class="aigis-colorPalette__label">rgba(0,0,0,0.26)</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0,0,0,0.54);"></div><div class="aigis-colorPalette__label">rgba(0,0,0,0.54)</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0,0,0,0.87);"></div><div class="aigis-colorPalette__label">rgba(0,0,0,0.87)</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255,255,255,0.12);"></div><div class="aigis-colorPalette__label">rgba(255,255,255,0.12)</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255,255,255,0.30);"></div><div class="aigis-colorPalette__label">rgba(255,255,255,0.30)</div></div>
-<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255,255,255,0.70);"></div><div class="aigis-colorPalette__label">rgba(255,255,255,0.70)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #1da1f2;"></div><div class="aigis-colorPalette__label">#1da1f2</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #38393d;"></div><div class="aigis-colorPalette__label">#38393d</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #3a579d;"></div><div class="aigis-colorPalette__label">#3a579d</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #4ecd00;"></div><div class="aigis-colorPalette__label">#4ecd00</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #5951d8;"></div><div class="aigis-colorPalette__label">#5951d8</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #cd5b45;"></div><div class="aigis-colorPalette__label">#cd5b45</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: #ffffff;"></div><div class="aigis-colorPalette__label">#ffffff</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0, 0, 0, 0.12);"></div><div class="aigis-colorPalette__label">rgba(0, 0, 0, 0.12)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0, 0, 0, 0.26);"></div><div class="aigis-colorPalette__label">rgba(0, 0, 0, 0.26)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0, 0, 0, 0.54);"></div><div class="aigis-colorPalette__label">rgba(0, 0, 0, 0.54)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(0, 0, 0, 0.87);"></div><div class="aigis-colorPalette__label">rgba(0, 0, 0, 0.87)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255, 255, 255, 0.12);"></div><div class="aigis-colorPalette__label">rgba(255, 255, 255, 0.12)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255, 255, 255, 0.3);"></div><div class="aigis-colorPalette__label">rgba(255, 255, 255, 0.3)</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255, 255, 255, 0.7);"></div><div class="aigis-colorPalette__label">rgba(255, 255, 255, 0.7)</div></div>
 <div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: tomato;"></div><div class="aigis-colorPalette__label">tomato</div></div>
 
 
-        <footer class="aigis-footer">Last update at 2018/06/18 17:55</footer>
+        <footer class="aigis-footer">Last update at 2018/11/06 22:33</footer>
       </div>
     </div>
   </div>
