fix: 🐛 meta include

--- a/styleguide/color.html
+++ b/styleguide/color.html
@@ -45,9 +45,10 @@
 <div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255, 255, 255, 0.3);"></div><div class="aigis-colorPalette__label">rgba(255, 255, 255, 0.3)</div></div>
 <div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: rgba(255, 255, 255, 0.7);"></div><div class="aigis-colorPalette__label">rgba(255, 255, 255, 0.7)</div></div>
 <div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: tomato;"></div><div class="aigis-colorPalette__label">tomato</div></div>
+<div class="aigis-colorPalette"><div class="aigis-colorPalette__color" style="background-color: transparent;"></div><div class="aigis-colorPalette__label">transparent</div></div>
 
 
-        <footer class="aigis-footer">Last update at 2018/11/06 23:14</footer>
+        <footer class="aigis-footer">Last update at 2018/11/08 19:14</footer>
       </div>
     </div>
   </div>
